--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^7.1.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.4",
+    "prism-theme-vars": "^0.2.2",
     "swrv": "^1.0.0-beta.8",
     "vue": "^3.2.21"
   },
@@ -39,6 +40,8 @@
     "@vueuse/head": "^0.5.1",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
+    "markdown-it-link-attributes": "^3.0.0",
+    "markdown-it-prism": "^2.2.1",
     "postcss": "^8.4.4",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2",
