update to latest deps

--- a/ui/package.json
+++ b/ui/package.json
@@ -10,51 +10,51 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@servicestack/client": "^1.0.57",
-    "@vueuse/core": "^7.1.2",
+    "@servicestack/client": "^1.1.13",
+    "@vueuse/core": "^7.5.3",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.4",
+    "pinia": "^2.0.9",
     "prism-theme-vars": "^0.2.2",
     "swrv": "^1.0.0-beta.8",
     "vue": "^3.2.21"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.0.11",
+    "@iconify-json/carbon": "^1.0.12",
     "@iconify-json/emojione": "^1.0.2",
     "@iconify-json/et": "^1.0.1",
-    "@iconify-json/ic": "^1.0.5",
+    "@iconify-json/ic": "^1.0.7",
     "@iconify-json/line-md": "^1.0.1",
-    "@iconify-json/logos": "^1.0.1",
-    "@iconify-json/mdi": "^1.0.10",
+    "@iconify-json/logos": "^1.0.4",
+    "@iconify-json/mdi": "^1.0.12",
     "@iconify-json/noto": "^1.0.3",
-    "@iconify-json/octicon": "^1.0.5",
-    "@iconify-json/simple-icons": "^1.0.11",
+    "@iconify-json/octicon": "^1.0.7",
+    "@iconify-json/simple-icons": "^1.0.16",
     "@iconify-json/simple-line-icons": "^1.0.1",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@types/node": "^16.11.10",
+    "@types/node": "^17.0.8",
     "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^1.10.1",
-    "@vue/compiler-sfc": "^3.2.23",
-    "@vue/server-renderer": "^3.2.23",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/compiler-sfc": "^3.2.26",
+    "@vue/server-renderer": "^3.2.26",
     "@vueuse/head": "^0.5.1",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.1",
     "cross-env": "^7.0.3",
-    "markdown-it-link-attributes": "^3.0.0",
+    "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.1",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.1",
-    "typescript": "^4.5.2",
-    "unplugin-auto-import": "^0.4.20",
-    "unplugin-icons": "^0.12.20",
-    "unplugin-vue-components": "^0.17.2",
-    "vite": "^2.6.14",
-    "vite-plugin-inspect": "^0.3.11",
-    "vite-plugin-md": "^0.11.4",
-    "vite-plugin-pages": "^0.19.0-beta.6",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.11",
+    "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.5.5",
+    "unplugin-icons": "^0.13.0",
+    "unplugin-vue-components": "^0.17.11",
+    "vite": "^2.7.10",
+    "vite-plugin-inspect": "^0.3.13",
+    "vite-plugin-md": "^0.11.7",
+    "vite-plugin-pages": "^0.19.9",
     "vite-plugin-vue-layouts": "^0.5.0",
-    "vite-ssg": "^0.16.2",
+    "vite-ssg": "^0.17.5",
     "vue-router": "^4.0.12",
-    "vue-tsc": "^0.29.6"
+    "vue-tsc": "^0.30.2"
   }
 }
